fixing y-spacing

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -28,7 +28,7 @@ form {
 }
 
 .input-group {
-  margin-top: 1.5rem;
+  margin-top: 1.25rem;
   margin-inline: auto;
   width: min(100%, 555px);
   display: flex;
