--- a/scss/_media-query.scss
+++ b/scss/_media-query.scss
@@ -12,7 +12,7 @@
   }
 
   .container {
-    margin-top: 2.5rem;
+    margin-top: 2.25rem;
     display: flex;
     justify-content: space-between;
     padding: 1.2rem 0;
@@ -36,7 +36,7 @@
   }
 
   .container {
-    margin-top: 3rem;
+    margin-top: 2.75rem;
   }
 
   .box {
